--- a/vignettes/The-Math-Behind-workboots.Rmd
+++ b/vignettes/The-Math-Behind-workboots.Rmd
@@ -174,14 +174,14 @@ tibble(.pred = preds_train_mod) %>%
              size = 2.5,
              color = "midnightblue") +
   geom_abline(linetype = "dashed",
-              size = 1, 
+              linewidth = 1, 
               color = "gray") +
   labs(title = "Predicted sale price of home in Sacramento",
        subtitle = "Adding a single error estimate produces poor predictions of price",
        x = "Predicted price",
        y = "Actual price") +
-  scale_x_log10(labels = scales::label_dollar(scale_cut = cut_short_scale())) +
-  scale_y_log10(labels = scales::label_dollar(scale_cut = cut_short_scale())) 
+  scale_x_log10(labels = scales::label_dollar()) +
+  scale_y_log10(labels = scales::label_dollar()) 
   
 ```
 
@@ -217,10 +217,10 @@ sacramento_pred_int %>%
   geom_errorbar(alpha = 0.25,
                 color = "midnightblue",
                 width = 0.0125) +
-  scale_x_log10(labels = scales::label_dollar(scale_cut = cut_short_scale())) +
-  scale_y_log10(labels = scales::label_dollar(scale_cut = cut_short_scale())) +
+  scale_x_log10(labels = scales::label_dollar()) +
+  scale_y_log10(labels = scales::label_dollar()) +
   geom_abline(linetype = "dashed",
-              size = 1,
+              linewidth = 1,
               color = "gray") +
   labs(title = "Predicted sale price of home in Sacramento",
        subtitle = "Using many resamples allows us to generate prediction intervals",
